--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "vite": "^4.1.1"
+  },
+  "dependencies": {
+    "vercel": "^31.0.2"
   }
 }
